--- a/SkiNet-API/SkiNet-API/SkiNet-API.csproj
+++ b/SkiNet-API/SkiNet-API/SkiNet-API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>annotations</Nullable>
+    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
     <RootNamespace>SkiNet_API</RootNamespace>
