--- a/SkiNet/SkiNet.API/Properties/launchSettings.json
+++ b/SkiNet/SkiNet.API/Properties/launchSettings.json
@@ -10,13 +10,5 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:28064",
-      "sslPort": 44371
-    }
-  }
+  "$schema": "http://json.schemastore.org/launchsettings.json"
 }
